crates/nash-report/tests/parse/expression/snapshots/parse__expression__do___error_empty_do.snap
---
source: crates/nash-report/tests/parse/expression/do_.rs
assertion_line: 36
description: "Code (indented inside a def):\n\n    do\n"
info: diagnostic
---
nash::syntax

  × Expected a statement after `do`.
   ╭─[src/Main.nash:1:7]
 1 │     do
   ·       ─
   ╰────
  help: Add an indented statement.
