crates/nash-report/tests/parse/expression/snapshots/parse__expression__do___error_trailing_bind.snap
---
source: crates/nash-report/tests/parse/expression/do_.rs
assertion_line: 5
description: "Code (indented inside a def):\n\n    do\n        x <- e\n"
info: diagnostic
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:2:9]
 1 │     do
 2 │         x <- e
   ·         ─
   ╰────
  help: Add a final expression after this binding.
