crates/nash-report/tests/parse/expression/snapshots/parse__expression__do___error_trailing_let.snap
---
source: crates/nash-report/tests/parse/expression/do_.rs
assertion_line: 15
description: "Code (indented inside a def):\n\n    do\n        let y = 1\n"
info: diagnostic
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:2:9]
 1 │     do
 2 │         let y = 1
   ·         ─
   ╰────
  help: Add a final expression after this binding.
